# AurigaHL7

./: .gitignore  HOWTO  README
2.4/WIN/: HL7SDK_2_4.vcxproj  HL7SDK_2_4.vcxproj.filters  main.cpp
2.4/datatype/: AD.h  AUI.h  CCD.h  CCP.h  CD.h  CE.h  CE_0002.h  CE_0005.h  CE_0006.h  CE_0048.h  CE_0049.h  CE_0050.h  CE_0051.h  CE_0055.h  CE_0059.h  CE_0063.h  CE_0066.h  CE_0069.h  CE_0070.h  CE_0072.h  CE_0083.h  CE_0088.h  CE_0114.h  CE_0118.h  CE_0127.h  CE_0128.h  CE_0129.h  CE_0131.h  CE_0132.h  CE_0136.h  CE_0160.h  CE_0162.h  CE_0163.h  CE_0164.h  CE_0165.h  CE_0171.h  CE_0172.h  CE_0175.h  CE_0181.h  CE_0184.h  (+202 more)
2.4/hello/: Makefile  datatypes.txt  messages.txt  segments.txt
2.4/message/: ACK.h  ACK_N02.h  ADR_A19.h  ADT_A01.h  ADT_A02.h  ADT_A03.h  ADT_A05.h  ADT_A06.h  ADT_A09.h  ADT_A15.h  ADT_A16.h  ADT_A17.h  ADT_A18.h  ADT_A20.h  ADT_A21.h  ADT_A24.h  ADT_A30.h  ADT_A37.h  ADT_A38.h  ADT_A39.h  ADT_A43.h  ADT_A45.h  ADT_A50.h  ADT_A52.h  ADT_A54.h  ADT_A60.h  ADT_A61.h  BAR_P01.h  BAR_P02.h  BAR_P05.h  BAR_P06.h  BAR_P10.h  CRM_C01.h  CSU_C09.h  DFT_P03.h  DFT_P11.h  DOC_T12.h  DSR_P04.h  DSR_Q01.h  DSR_Q03.h  (+141 more)
2.4/segment/: ABS.h  ACC.h  ADD.h  AFF.h  AIG.h  AIL.h  AIP.h  AIS.h  AL1.h  APR.h  ARQ.h  AUT.h  BHS.h  BLC.h  BLG.h  BTS.h  CDM.h  CM0.h  CM1.h  CM2.h  CNS.h  CSP.h  CSR.h  CSS.h  CTD.h  CTI.h  DB1.h  DG1.h  DRG.h  DSC.h  DSP.h  ECD.h  ECR.h  EDU.h  EQL.h  EQP.h  EQU.h  ERQ.h  ERR.h  EVN.h  (+101 more)
2.8.1/: README
2.8.1/datatype/: AD.h  AUI.h  CCD.h  CCP.h  CD.h  CF.h  CNE.h  CNN.h  CP.h  CQ.h  CSU.h  CWE.h  CX.h  DDI.h  DIN.h  DLD.h  DLN.h  DLT.h  DR.h  DT.h  DTM.h  DTN.h  ED.h  EI.h  EIP.h  ERL.h  FC.h  FN.h  FT.h  GTS.h  HD.h  ICD.h  ID.h  IS.h  JCC.h  MA.h  MO.h  MOC.h  MOP.h  MSG.h  (+49 more)
2.8.1/hello/: Makefile  datatypes.txt  messages.txt  segments.txt
2.8.1/message/: ACK.h  ADT_A01.h  ADT_A02.h  ADT_A03.h  ADT_A05.h  ADT_A06.h  ADT_A09.h  ADT_A12.h  ADT_A15.h  ADT_A16.h  ADT_A17.h  ADT_A20.h  ADT_A21.h  ADT_A24.h  ADT_A37.h  ADT_A38.h  ADT_A39.h  ADT_A43.h  ADT_A44.h  ADT_A45.h  ADT_A50.h  ADT_A52.h  ADT_A54.h  ADT_A60.h  ADT_A61.h  BAR_P01.h  BAR_P02.h  BAR_P05.h  BAR_P06.h  BAR_P10.h  BAR_P12.h  BPS_O29.h  BRP_O30.h  BRT_O32.h  BTS_O31.h  CCF_I22.h  CCI_I22.h  CCM_I21.h  CCQ_I19.h  CCR_I16.h  (+167 more)
2.8.1/segment/: ABS.h  ACC.h  ADD.h  ADJ.h  AFF.h  AIG.h  AIL.h  AIP.h  AIS.h  AL1.h  APR.h  ARQ.h  ARV.h  AUT.h  BHS.h  BLC.h  BLG.h  BPO.h  BPX.h  BTS.h  BTX.h  BUI.h  CDM.h  CDO.h  CER.h  CM0.h  CM1.h  CM2.h  CNS.h  CON_.h  CSP.h  CSR.h  CSS.h  CTD.h  CTI.h  DB1.h  DG1.h  DMI.h  DON.h  DRG.h  (+141 more)
2.9/: README
2.9/datatype/: AD.h  AUI.h  CCD.h  CCP.h  CD.h  CF.h  CNE.h  CNN.h  CP.h  CQ.h  CSU.h  CWE.h  CX.h  DDI.h  DIN.h  DLD.h  DLN.h  DLT.h  DR.h  DT.h  DTM.h  DTN.h  ED.h  EI.h  EIP.h  ERL.h  FC.h  FN.h  FT.h  GTS.h  HD.h  ICD.h  ID.h  IS.h  JCC.h  MA.h  MO.h  MOC.h  MOP.h  MSG.h  (+43 more)
2.9/hello/: Makefile  datatypes.txt  messages.txt  segments.txt
2.9/message/: ACK.h  ACK_PC1_ACK.h  (+343 more)
common/: DBGTest.h  HL7Exception.h  HL7Object.cpp  HL7Object.h  ObjToPipe.cpp  ObjToPipe.h  Util.cpp  Util.h  Xml.cpp  Xml.h  dataencode.cpp  dataencode.h  hl7mllp.h  hl7socket.h  validation.cpp  validation.h
examples/client/: CMakeLists.txt  client.cpp  client.vcxproj
examples/hello/: CMakeLists.txt  hello.cpp  hello.vcxproj
examples/server/: CMakeLists.txt  server.cpp  server.vcxproj
test/socket_test/: CMakeLists.txt  socket_test.cpp  socket_test.vcxproj  socket_test.vcxproj.filters
test/tests/: CMakeLists.txt  hl7object_tests.h  main.cpp  main_test.vcxproj  orr_r01.h  pipe_test.h  test.h
test/verify_test/: CMakeLists.txt  verify_test.cpp  verify_test.sln  verify_test.vcxproj  verify_test.vcxproj.filters
test/verify_test/Debug/: vc140.idb
test/verify_test/Debug/verify_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  verify_test.lastbuildstate
(+272 files in other folders)
