CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT(hello)
SET(PROJECT_TOP_DIR "../..")
SET(COMMON_DIR ${PROJECT_TOP_DIR}/common)
SET(SRC_24_DIR ${PROJECT_TOP_DIR}/2.4)
SET(COMMON_SRC
	${COMMON_DIR}/HL7Object.h
	${COMMON_DIR}/HL7Object.cpp
	${COMMON_DIR}/ObjToPipe.h
	${COMMON_DIR}/ObjToPipe.cpp
	${COMMON_DIR}/Util.h
	${COMMON_DIR}/Util.cpp
	)
ADD_DEFINITIONS( -std=c++11 )
SET(hello_src hello.cpp ${COMMON_SRC})
INCLUDE_DIRECTORIES(${COMMON_DIR} ${SRC_24_DIR})
ADD_EXECUTABLE(hello ${hello_src})
