CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT(test)
SET(PROJECT_TOP_DIR "../..")
SET(COMMON_DIR ${PROJECT_TOP_DIR}/common)
SET(SRC_24_DIR ${PROJECT_TOP_DIR}/2.4)
SET(THIRD_SRC_DIR ${PROJECT_TOP_DIR}/thirdparty)
SET(COMMON_SRC
	${COMMON_DIR}/HL7Object.h
	${COMMON_DIR}/HL7Object.cpp
	${COMMON_DIR}/ObjToPipe.h
	${COMMON_DIR}/ObjToPipe.cpp
	${COMMON_DIR}/Util.h
	${COMMON_DIR}/Util.cpp
	)
ADD_DEFINITIONS( -std=c++11 )
SET(test_src main.cpp ${COMMON_SRC})
INCLUDE_DIRECTORIES( ${PROJECT_TOP_DIR} ${COMMON_DIR} ${SRC_24_DIR} ${THIRD_SRC_DIR})
ADD_EXECUTABLE(test ${test_src})
